<resources>
    <string name="app_name">Reto1</string>
    <string name="formulario">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="presentacion">"Bienvenido al formulario, por favor diligenciar los campos que aparecen en pantalla "</string>
    <string name="registrar">Registrar</string>
    <string name="errorNombre">Por favor ingresa el nombre</string>
    <string name="errorApellido">Por favor ingresar un apellido</string>
    <string name="errorTelefono">Por favor ingrese un teléfono válido</string>
    <string name="registroExitoso">Registro Exitoso</string>
    <string name="CalcularEdad">Calcular Edad</string>
    <string name="EquipoDeTrabajo">Equipo</string>
    <string name="mensajeFecha">Ingrese su fecha de nacimiento</string>
    <string name="fecha">Fecha Nacimiento</string>
    <string name="report_panned_date">report_planned_date</string>
    <string name="Alejo1">Alejandro Cifuentes</string>
    <string name="Alejo2">Alejandro Gallo</string>
</resources>